--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/container"
         tools:context=".MainActivity">
 
     <com.jkt44.ponggame.GameView
@@ -15,23 +16,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintVertical_bias="1.0" android:id="@+id/gameView"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:id="@+id/leftScore"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/gameView"
-            android:layout_marginStart="50dp"
-            android:textSize="50sp" android:text="0" android:visibility="visible"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:id="@+id/rightScore"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@+id/gameView"
-            android:layout_marginEnd="50dp" android:textSize="50sp" android:visibility="visible" android:text="0"/>
 
     <View
             android:layout_width="1dp"
